--- a/PalladiumDwh.ClientReader.Core.Tests/packages.config
+++ b/PalladiumDwh.ClientReader.Core.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FastMember" version="1.1.0" targetFramework="net46" />
+  <package id="Faker.Net" version="1.0.3" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
   <package id="NUnit" version="3.6.0" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net46" />
