--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FastMember" version="1.1.0" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="Faker" version="1.2" targetFramework="net46" />
+  <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
+  <package id="Npgsql" version="3.1.9" targetFramework="net46" />
   <package id="NUnit" version="3.6.0" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net46" />
 </packages>
