added a ReadExtracts class to extract patient data

--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Interfaces\ExtractRows\IPatientPharmacyExtractRow.cs" />
     <Compile Include="Interfaces\ExtractRows\IPatientStatusExtractRow.cs" />
     <Compile Include="Interfaces\ExtractRows\IPatientVisitExtractRow.cs" />
+    <Compile Include="Interfaces\IReadExtracts.cs" />
     <Compile Include="Interfaces\Repository\IFacilityRepository.cs" />
     <Compile Include="Interfaces\Repository\IPatientArtExtractRepository.cs" />
     <Compile Include="Interfaces\Repository\IPatientBaseLinesRepository.cs" />
@@ -81,8 +82,8 @@
     <Compile Include="Model\PatientStatusExtractRow.cs" />
     <Compile Include="Model\PatientVisitExtractRow.cs" />
     <Compile Include="Model\PatientExtractRow.cs" />
+    <Compile Include="Model\ReadExtracts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\SyncService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PalladiumDwh.Shared\PalladiumDwh.Shared.csproj">
@@ -93,7 +94,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
