--- a/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Model\PatientPharmacyExtractRowTests.cs" />
     <Compile Include="Model\PatientStatusExtractRowTests.cs" />
     <Compile Include="Model\PatientExtractRowTests.cs" />
+    <Compile Include="Model\ReadExtractsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelpers.cs" />
   </ItemGroup>
