--- a/PalladiumDwh.ClientReader.Infrastructure/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.50.2" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Faker.Net" version="1.0.3" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
