--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="Effort.EF6" version="1.3.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Faker" version="1.2" targetFramework="net46" />
+  <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
   <package id="NMemory" version="1.1.0" targetFramework="net46" />
